@@ -7,6 +7,7 @@
   to follow OCaml 5 memory model.
 * Added `Avutil.Frame.{duration, set_duration}`
 * Reset metadata before setting new value.
+* Fix min/max filter option values for int and int64 type.
 
 1.1.7 (2023-02-08)
 =====
